# raydium-with-hook-wip

raydium-amm/: Cargo.toml  HACKATHON_README.md  cli-test.md
raydium-amm/cli/: Cargo.toml  README.md
raydium-amm/cli/examples/: client_usage.rs
raydium-amm/cli/src/: main.rs
raydium-amm/program/: Cargo.toml
raydium-amm/program/src/: entrypoint.rs  error.rs  instruction.rs  invokers.rs  lib.rs  market_utils.rs  state.rs  tests.rs
raydium-amm/program/src/process/: admin.rs  args.rs  config.rs  constants.rs  deposit.rs  helpers.rs  initialize.rs  migrate.rs  mod.rs  monitor.rs  set_params.rs  simulate.rs  swap.rs  token2022.rs  whitelist.rs  withdraw.rs  withdraw_pnl.rs  withdraw_srm.rs
