[package]
name = "raydium-amm-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "^2.2"
solana-sdk = "^2.2"
solana-program = "2.2"
spl-token-2022 = "^8.0"
spl-token = "^8.0"
spl-associated-token-account = "^6.0"
spl-pod = "0.5"
spl-tlv-account-resolution = "^0.3"
solana-system-interface = "1.0"
raydium_amm = { path = "../program" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
bs58 = "0.5" 